test/cases/compile_errors/file_level_tuple_with_decls.zig
const std = @import("std");

u8,

// error
//
// :3:1: error: file cannot be a tuple
